Fix navbar breaking on safari

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -794,6 +794,10 @@ hr {
 header .left {
   display: flex;
   align-items: center;
+
+  img {
+    height: 58px;
+  }
 }
 
 @media screen and (min-width: 1032px) {
@@ -873,6 +877,8 @@ header .left {
     max-height: 35px;
     max-width: 50px;
   }
+
+  header
 
 }
 
